working on responsive design and fixed nav bar whose width exceeded 100% width due to gap, fixed by adding flex-wrap and overflow:hidden

--- a/components/Intro/intro.module.css
+++ b/components/Intro/intro.module.css
@@ -1,9 +1,11 @@
 .container{
   display: grid;
+  width:100%;
   height: calc(100% - 128px);
-  grid-template-columns:repeat(7,minmax(0,1fr));
+  grid-template-columns:repeat(8,minmax(0,1fr));
   grid-template-rows:repeat(10,minmax(0,1fr)) ;
   background-color: #FFFFFA;
+    overflow: hidden;
 }
 
 .info{
